# kandor

./: .gitignore  AGENTS.md  LICENSE  PLAN.md  README.md  pyproject.toml
.github/workflows/: pages.yml  pypi-publish.yml
docs/: api.html  architecture.html  getting-started.html  index.html  styles.css
examples/: demo.py  smoke_openai.py  temporal_kg_widget.py
examples/notebooks/: 01_quickstart_world_pipeline.ipynb  02_temporal_kg_queries.ipynb  03_temporal_kg_widget.ipynb  04_openai_world_pipeline.ipynb
kandor/: __init__.py
kandor/agents/: __init__.py  god_agent.py
kandor/builders/: __init__.py  world_builder.py
kandor/core/: __init__.py  exceptions.py  models.py  types.py
kandor/generation/: __init__.py  lore.py
kandor/llm/: __init__.py  base.py  env.py  mock.py  openai.py
kandor/memory/: __init__.py  retrieval.py  summaries.py  temporal_kg.py
kandor/prompts/: event_proposal.yaml  god_agent.yaml
kandor/simulation/: __init__.py  engine.py  events.py  rules.py  updater.py
kandor/widgets/: __init__.py  temporal_kg.js  temporal_kg.py
prompts/: lore_summary.yaml
reports/smoke/: README.md  openai-smoke-2026-03-24.txt  openai-smoke-kg-2026-03-24.json
scripts/: check_installed_wheel.py
sim_llm_game/: __init__.py
sim_llm_game/agents/: __init__.py  god_agent.py
sim_llm_game/builders/: __init__.py  world_builder.py
sim_llm_game/core/: __init__.py  models.py
sim_llm_game/generation/: __init__.py  lore.py
sim_llm_game/llm/: __init__.py  mock.py  openai.py
sim_llm_game/memory/: __init__.py  retrieval.py  summaries.py  temporal_kg.py
sim_llm_game/simulation/: __init__.py  engine.py  events.py  rules.py  updater.py
sim_llm_game/widgets/: __init__.py  temporal_kg.py
tests/: test_lore_generation.py  test_openai_provider.py  test_package_import.py  test_simulation_engine.py  test_temporal_kg.py  test_widget_resources.py  test_world_builder.py  test_world_models.py
