[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sim-llm-game"
version = "0.1.0"
description = "LLM-based world building with temporal knowledge graph memory."
readme = "PLAN.md"
requires-python = ">=3.9"
dependencies = [
  "pydantic>=2.7,<3.0",
  "PyYAML>=6.0,<7.0",
  "eval_type_backport>=0.2,<0.3; python_version < '3.10'",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
]
widgets = [
  "anywidget>=0.9,<1.0",
  "traitlets>=5.14,<6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
]

[tool.setuptools.packages.find]
include = ["sim_llm_game*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
