[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kandor"
version = "0.1.0"
description = "A bottle-city engine for simulated fictional worlds with temporal knowledge graph memory."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "pydantic>=2.7,<3.0",
  "PyYAML>=6.0,<7.0",
  "eval_type_backport>=0.2,<0.3; python_version < '3.10'",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
]
widgets = [
  "anywidget>=0.9,<1.0",
  "traitlets>=5.14,<6.0",
]

[tool.setuptools.packages.find]
include = ["kandor*", "prompts*"]

[tool.setuptools.package-data]
"kandor.widgets" = ["*.js"]
"prompts" = ["*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
